modified:   students-submissions/8946601/lab1.ipynb

--- a/students-submissions/8946601/lab1.ipynb
+++ b/students-submissions/8946601/lab1.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
    "source": [
     "import numpy as np\n",
     "A=np.arange(1,20,3)\n",
-    "print(a)"
+    "print(A)"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
      "output_type": "stream",
      "text": [
       "random numbers between 0 and 1\n",
-      " [0.8900666813944441, 0.10279941941346715, 0.42653729435073295]\n"
+      " [0.12843995957239696, 0.6865949081153894, 0.49940739742327767]\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -101,12 +101,12 @@
    "metadata": {},
    "source": [
     "<font color=\"blue\"><b>4. Create two 2x2 arrays and demonstrate how you can stack the elements vertically, horizontally, and split the arrays into smaller arrays.\n",
-    "3. Create a 2 D array [[10,20,45], [30,12,16], [42,17,56]] and perform the following operations:<b></font>"
+    "<b></font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -166,19 +166,23 @@
       " [[70 28]\n",
       " [70 30]\n",
       " [60 26]]\n",
-      "Not possible to multiply Y * X- The column of first matrix is not equal to second\n"
+      "--------------X * Y success--------------------\n",
+      "OOPs...!!!! Not possible to multiply Y * X\n",
+      "The column of first matrix is not equal to second\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "X=np.array([[5, 7, 2], [4, 5, 6], [7, 4 ,2]])\n",
     "Y=np.array([[4, 2], [6, 2], [4, 2]])\n",
-    "\n",
-    "print(\"Trying to multiply X * Y -\\n\",np.dot(X,Y))\n",
     "try:\n",
+    "    print(\"Trying to multiply X * Y -\\n\",np.dot(X,Y))\n",
+    "    print(\"--------------X * Y success--------------------\")\n",
     "    print(\"Trying to multiply Y * X -\\n\",np.dot(Y,X))\n",
+    "    print(\"--------------Y * X success--------------------\")\n",
     "except:\n",
-    "    print(\"Not possible to multiply Y * X- The column of first matrix is not equal to second\")\n"
+    "    print(\"OOPs...!!!! Not possible to multiply Y * X\\nThe column of first matrix is not equal to the row of second matrix\\n\")\n"
    ]
   },
   {
@@ -186,39 +190,61 @@
    "metadata": {},
    "source": [
     "<font color=\"blue\"><b>6. Create two arrays, x = ([2, -1, -8]) y = ([3, 1, -2]),\n",
-    "Find the Shape, Number of dimensions of vector x.\n",
-    "Reshape the vector x to a matrix of size (3,1) and determine the number of dimensions after reshaping y to a matrix of (3,1).</b>,</font>"
+    "Find the Shape, Number of dimensions of vector x.<br>\n",
+    "Reshape the vector x to a matrix of size (3,1) and <br>determine the number of dimensions after reshaping y to a matrix of (3,1).</b>,</font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape of X= (3,)\n",
+      "Shape of vector X= (3,)\n",
+      "Shape of vector Y= (3,)\n",
       "Dimension of vector X= 1\n",
-      "shape of X= (3,)\n"
+      "Reshaping array X to (3,1)\n",
+      " [[ 2]\n",
+      " [-1]\n",
+      " [-8]]\n",
+      "Shape of reshaped vector X= (3, 1)\n",
+      "Dimension of reshaped Y= 2\n",
+      "Shape of reshaped vector Y= (3, 1)\n"
      ]
     }
    ],
    "source": [
     "X=np.array([2, -1, -8])\n",
-    "print(\"shape of X=\",X.shape)\n",
-    "print(\"Dimension of vector X=\",X.ndim)\n",
     "Y=np.array([3, 1, -2])\n",
-    "print(\"shape of X=\",Y.shape)\n"
+    "print(\"Shape of vector X=\",X.shape)\n",
+    "print(\"Shape of vector Y=\",Y.shape)\n",
+    "print(\"Dimension of vector X=\",X.ndim)\n",
+    "X_new=X.reshape(3,1)\n",
+    "print(\"Reshaping array X to (3,1)\\n\",X_new)\n",
+    "print(\"Shape of reshaped vector X=\",X_new.shape)\n",
+    "\n",
+    "Y_new=Y.reshape(3,1)\n",
+    "print(\"Dimension of reshaped Y=\",Y_new.ndim)\n",
+    "print(\"Shape of reshaped vector Y=\",Y_new.shape)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. How does broadcasting work? Demonstrate the subtraction, multiplication by considering a 3 x 3 matrix."
+    "<font color=\"blue\"><b>7. How does broadcasting work? Demonstrate the subtraction, multiplication by considering a 3 x 3 matrix.</b></font>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
