modified:   students-submissions/8946601/lab1.ipynb

--- a/students-submissions/8946601/lab1.ipynb
+++ b/students-submissions/8946601/lab1.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
       " [60 26]]\n",
       "--------------X * Y success--------------------\n",
       "OOPs...!!!! Not possible to multiply Y * X\n",
-      "The column of first matrix is not equal to second\n",
+      "The column of first matrix is not equal to the row of second matrix\n",
       "\n"
      ]
     }
@@ -241,10 +241,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subtraction using broadcasting\n",
+      " [[3 5 0]\n",
+      " [2 3 4]\n",
+      " [5 2 0]]\n",
+      "Subtraction using broadcasting\n",
+      " [[0 0 0]\n",
+      " [0 0 0]\n",
+      " [6 3 1]]\n",
+      "Multiplication using broadcasting\n",
+      " [[10 14  4]\n",
+      " [ 8 10 12]\n",
+      " [14  8  4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A=np.array([[5, 7, 2], [4, 5, 6], [7, 4 ,2]])\n",
+    "B=np.array([2])\n",
+    "C=np.array([[5, 7, 2], [4, 5, 6], [1, 1 ,1]])\n",
+    "DEC1=A-B\n",
+    "print(\"Subtraction using broadcasting\\n\",DEC1)\n",
+    "DEC2=A-C\n",
+    "print(\"Subtraction using broadcasting\\n\",DEC2)\n",
+    "MUL1=A*B\n",
+    "print(\"Multiplication using broadcasting\\n\",MUL1)\n",
+    "MUL2=A*C\n",
+    "print(\"Multiplication using broadcasting\\n\",MUL2)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
