--- a/students-submissions/8946601/lab1.ipynb
+++ b/students-submissions/8946601/lab1.ipynb
@@ -146,8 +146,7 @@
    "metadata": {},
    "source": [
     "<font color=\"blue\"><b> 5. Create two matrices X= ([[5, 7, 2], [4, 5, 6], [7, 4 ,2]]) Y= ([[4, 2], [6, 2], [4, 2]]),\n",
-    "<br>\n",
-    " Is it possible to multiply these matrices?</font>\n",
+    "Is it possible to multiply these matrices?</font>\n",
     "<br>ANS: A matrix of shape (m, n) can be multiplied with a matrix of size (p,q) if and only if n is equal to p, then the shape of the resultant matrix will be (m,q). In the given example X is a matrix of shape (3,3) and Y is of shape (3,2), Thus, number of columns of first matrix is equal to number of rows of the second matrix. Thus it is possible to multiply x with Y. The resultant matrix will be of size (3,2). But the reverse is not possible. That is Y with X.<br>\n",
     "<font color=\"blue\">Demonstrate the case when it is not possible to.<b></font>\n",
     "<br> When we try to multiply Y with X, we can't multiply. Both examples are demonstrated below.\n"
@@ -241,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +258,11 @@
       "Multiplication using broadcasting\n",
       " [[10 14  4]\n",
       " [ 8 10 12]\n",
-      " [14  8  4]]\n"
+      " [14  8  4]]\n",
+      "Multiplication using broadcasting\n",
+      " [[25 49  4]\n",
+      " [16 25 36]\n",
+      " [ 7  4  2]]\n"
      ]
     }
    ],
@@ -276,6 +279,14 @@
     "MUL2=A*C\n",
     "print(\"Multiplication using broadcasting\\n\",MUL2)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>PART - B</b>\n",
+    "<b> Notebook to demonstrate NumPy Operations </b>"
    ]
   }
  ],
