new file:   students-submissions/8946601/docs/index.html 	new file:   students-submissions/8946601/index.ipynb 	modified:   students-submissions/8946601/lab1.ipynb

--- a/students-submissions/8946601/lab1.ipynb
+++ b/students-submissions/8946601/lab1.ipynb
@@ -5,7 +5,13 @@
    "metadata": {},
    "source": [
     "<h1><center>  Lab 1 – Basic NumPy Operations<center</h1>\n",
-    "<h6>Submitted by Beena Kurian(8946601)</h6>\n",
+    "<h6>Submitted by Beena Kurian(8946601)</h6>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<b>PART - A</b>\n",
     "<b> Notebook to demonstrate NumPy Operations </b>"
    ]
@@ -19,21 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1  4  7 10 13 16 19]\n"
+      "An array that starts from the integer 1, ends at 20: [ 1  4  7 10 13 16 19]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "A=np.arange(1,20,3)\n",
-    "print(A)"
+    "print(\"An array that starts from the integer 1, ends at 20:\", A)"
    ]
   },
   {
@@ -45,15 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "random numbers between 0 and 1\n",
-      " [0.12843995957239696, 0.6865949081153894, 0.49940739742327767]\n"
+      "Random numbers between 0 and 1:\n",
+      " [0.9809921994258683, 0.39646027437343667, 0.8023019254963508]\n"
      ]
     }
    ],
@@ -61,7 +67,29 @@
     "B = []\n",
     "for i in range(3):\n",
     "    B.append(np.random.rand())\n",
-    "print(\"random numbers between 0 and 1\\n\",B)"
+    "print(\"Random numbers between 0 and 1:\\n\",B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 0 into shape (3,)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\beena\\conestoga_aiml\\aia\\Fall2023\\students-submissions\\8946601\\lab1.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/beena/conestoga_aiml/aia/Fall2023/students-submissions/8946601/lab1.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m B\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39;49marray([])\u001b[39m.\u001b[39;49mreshape(\u001b[39m3\u001b[39;49m,)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/beena/conestoga_aiml/aia/Fall2023/students-submissions/8946601/lab1.ipynb#X33sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(B)\n",
+      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 0 into shape (3,)"
+     ]
+    }
+   ],
+   "source": [
+    "B=np.array([])\n",
+    "print(B)"
    ]
   },
   {
@@ -74,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -176,9 +204,9 @@
     "X=np.array([[5, 7, 2], [4, 5, 6], [7, 4 ,2]])\n",
     "Y=np.array([[4, 2], [6, 2], [4, 2]])\n",
     "try:\n",
-    "    print(\"Trying to multiply X * Y -\\n\",np.dot(X,Y))\n",
+    "    print(\"Trying to multiply X * Y -\\n\",np.matmul(X,Y))\n",
     "    print(\"--------------X * Y success--------------------\")\n",
-    "    print(\"Trying to multiply Y * X -\\n\",np.dot(Y,X))\n",
+    "    print(\"Trying to multiply Y * X -\\n\",np.matmul(Y,X))\n",
     "    print(\"--------------Y * X success--------------------\")\n",
     "except:\n",
     "    print(\"OOPs...!!!! Not possible to multiply Y * X\\nThe column of first matrix is not equal to the row of second matrix\\n\")\n"
@@ -195,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -235,12 +263,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=\"blue\"><b>7. How does broadcasting work? Demonstrate the subtraction, multiplication by considering a 3 x 3 matrix.</b></font>"
+    "<font color=\"blue\"><b>7. How does broadcasting work? Demonstrate the subtraction, multiplication by considering a 3 x 3 matrix.</b></font>\n",
+    "<br><b>Broadcasting is the ability of Numpy to treat arrays of different shapes to perform arithemetic operations. <br>The shape of the arrays are compatible if they are of same size or one of then is of size one."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -285,8 +314,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>PART - B</b>\n",
-    "<b> Notebook to demonstrate NumPy Operations </b>"
+    "<center><b>PART - B\n",
+    "Linear Equations </b></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"Blue\"><b>Determine the singularity of the system of equations, comment on the expected solution of the system. Solve the system of equations if possible. Justify the reason why you believe the system can or cannot be solved using numpy functions.</b></font><br>\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Part B.1</b><br>\n",
+    "4x + y - 2z = 10<br>\n",
+    "2x - 3y + 2z = -4<br>\n",
+    "x + 2y + 3z = 6<br>\n",
+    "<b>Expected solution: The determinant of the matrix is not zero, thus, the matrix is non-singular,and  we can solve the matrix</b> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Determinant= -70.00000000000003\n",
+      "Part B.1, Solution =  [ 1.8  2.4 -0.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L=np.array([[4,1,-2],[2,-3,2],[1,2,3]])\n",
+    "R=np.array([10,-4,6])\n",
+    "detL=np.linalg.det(L)\n",
+    "print(\"Determinant=\",detL)\n",
+    "if(detL!=0):\n",
+    "    result=np.linalg.solve(L,R)\n",
+    "    print(\"Part B.1, Solution = \", result)\n",
+    "else:\n",
+    "    print(\"Sorry...!!! The linear system of equations is not solvable\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Part B.2</b><br>\n",
+    "2x - y + 3z + 4w = 10<br>\n",
+    "4x - 2y + 6z + 8w = 20<br>\n",
+    "3x + y - 2z + 2w = 3<br>\n",
+    "x + 3y - 4z + w = -1<br>\n",
+    "<b>Expected solution: The determinant of the matrix is zero, thus, the matrix is singular,and  we can not solve the matrix</b> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Determinant= 0.0\n",
+      "Sorry...!!! The linear system of equations is not solvable, because the matrix is singular\n"
+     ]
+    }
+   ],
+   "source": [
+    "L=np.array([[2,-1,3,4],[4,-2,6,8],[3,1,-2,2],[1,3,-4,1]])\n",
+    "R=np.array([10,20,3,-1])\n",
+    "detL=np.linalg.det(L)\n",
+    "print(\"Determinant=\",detL)\n",
+    "if(detL!=0):\n",
+    "    result=np.linalg.solve(L,R)\n",
+    "    print(\"Part B.2, Solution = \", result)\n",
+    "else:\n",
+    "    print(\"Sorry...!!! The linear system of equations is not solvable, because the matrix is singular\")"
    ]
   }
  ],
