--- a/students-submissions/8946601/lab1.ipynb
+++ b/students-submissions/8946601/lab1.ipynb
@@ -25,21 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An array that starts from the integer 1, ends at 20: [ 1  4  7 10 13 16 19]\n"
+      "An array 1-20 incremented by: [ 1  4  7 10 13 16 19]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "A=np.arange(1,20,3)\n",
-    "print(\"An array that starts from the integer 1, ends at 20:\", A)"
+    "print(\"An array 1-20 incremented by:\", A)"
    ]
   },
   {
@@ -51,44 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random numbers between 0 and 1:\n",
-      " [0.9809921994258683, 0.39646027437343667, 0.8023019254963508]\n"
+      "[0.26888299 0.38786976 0.28527594]\n"
      ]
     }
    ],
    "source": [
-    "B = []\n",
-    "for i in range(3):\n",
-    "    B.append(np.random.rand())\n",
-    "print(\"Random numbers between 0 and 1:\\n\",B)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 0 into shape (3,)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\beena\\conestoga_aiml\\aia\\Fall2023\\students-submissions\\8946601\\lab1.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/beena/conestoga_aiml/aia/Fall2023/students-submissions/8946601/lab1.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m B\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39;49marray([])\u001b[39m.\u001b[39;49mreshape(\u001b[39m3\u001b[39;49m,)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/beena/conestoga_aiml/aia/Fall2023/students-submissions/8946601/lab1.ipynb#X33sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(B)\n",
-      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 0 into shape (3,)"
-     ]
-    }
-   ],
-   "source": [
-    "B=np.array([])\n",
+    "B=np.random.rand(3)\n",
     "print(B)"
    ]
   },
@@ -102,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -120,8 +95,8 @@
    ],
    "source": [
     "C=np.array([[10,20,45], [30,12,16], [42,17,56]])\n",
-    "print(\"first 2 Rows\\n\",C[0:2])\n",
-    "print(\"Last 2 Rows\\n\",C[1:3])"
+    "print(\"first 2 Rows\\n\",C[:2])\n",
+    "print(\"Last 2 Rows\\n\",C[-2:])"
    ]
   },
   {
@@ -134,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -151,11 +126,13 @@
       " [ 40  50  60 100 110 120]]\n",
       "splitting the arrays using array split\n",
       " [array([[10, 20, 30]]), array([[40, 50, 60]]), array([], shape=(0, 3), dtype=int32)]\n",
-      "splitting the arrays \n",
+      "splitting the arrays horizontally \n",
       " [array([[10],\n",
       "       [40]]), array([[20],\n",
       "       [50]]), array([[30],\n",
-      "       [60]])]\n"
+      "       [60]])]\n",
+      "splitting the arrays vertically\n",
+      " [array([[10, 20, 30]]), array([[40, 50, 60]])]\n"
      ]
     }
    ],
@@ -166,7 +143,8 @@
     "print(\"Stack the elements vertically\\n\",np.vstack((D,E)))\n",
     "print(\"Stack the elements horizontally\\n\",np.hstack((D,E)))\n",
     "print(\"splitting the arrays using array split\\n\",np.array_split(D,3))\n",
-    "print(\"splitting the arrays \\n\",np.hsplit(D,3))\n"
+    "print(\"splitting the arrays horizontally \\n\",np.hsplit(D,3))\n",
+    "print(\"splitting the arrays vertically\\n\",np.vsplit(D,2))"
    ]
   },
   {
@@ -182,34 +160,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trying to multiply X * Y -\n",
+      " ----------X * Y ----------- \n",
       " [[70 28]\n",
       " [70 30]\n",
       " [60 26]]\n",
-      "--------------X * Y success--------------------\n",
+      "\n",
       "OOPs...!!!! Not possible to multiply Y * X\n",
-      "The column of first matrix is not equal to the row of second matrix\n",
-      "\n"
+      "The number of columns of first matrix is not equal to the row of second matrix\n"
      ]
     }
    ],
    "source": [
     "X=np.array([[5, 7, 2], [4, 5, 6], [7, 4 ,2]])\n",
     "Y=np.array([[4, 2], [6, 2], [4, 2]])\n",
-    "try:\n",
-    "    print(\"Trying to multiply X * Y -\\n\",np.matmul(X,Y))\n",
-    "    print(\"--------------X * Y success--------------------\")\n",
-    "    print(\"Trying to multiply Y * X -\\n\",np.matmul(Y,X))\n",
-    "    print(\"--------------Y * X success--------------------\")\n",
-    "except:\n",
-    "    print(\"OOPs...!!!! Not possible to multiply Y * X\\nThe column of first matrix is not equal to the row of second matrix\\n\")\n"
+    "# Multiplying X*Y\n",
+    "if(X.shape[1]==Y.shape[0]):\n",
+    "    print(\" ----------X * Y ----------- \\n\",np.matmul(X,Y))\n",
+    "else:\n",
+    "    print(\"OOPs...!!!! Not possible to multiply X * Y\")\n",
+    "    print(\"The number of columns of first matrix is not equal to the row of second matrix\")\n",
+    "# Multiplying Y*X\n",
+    "if(Y.shape[1]==X.shape[0]):\n",
+    "    print(\" ----------Y * X ----------- \\n\",np.matmul(Y,X))\n",
+    "else:\n",
+    "    print(\"\\nOOPs...!!!! Not possible to multiply Y * X\")\n",
+    "    print(\"The number of columns of first matrix is not equal to the row of second matrix\")\n"
    ]
   },
   {
@@ -223,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
