modified:   students-submissions/8946601/lab1.ipynb

--- a/students-submissions/8946601/lab1.ipynb
+++ b/students-submissions/8946601/lab1.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -51,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.26888299 0.38786976 0.28527594]\n"
+      "[0.62548654 0.91640732 0.88655389]\n"
      ]
     }
    ],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,10 @@
     }
    ],
    "source": [
+    "# Creating Arrays\n",
     "C=np.array([[10,20,45], [30,12,16], [42,17,56]])\n",
+    "\n",
+    "# Slicing Arrays\n",
     "print(\"first 2 Rows\\n\",C[:2])\n",
     "print(\"Last 2 Rows\\n\",C[-2:])"
    ]
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -125,26 +128,31 @@
       " [[ 10  20  30  70  80  90]\n",
       " [ 40  50  60 100 110 120]]\n",
       "splitting the arrays using array split\n",
-      " [array([[10, 20, 30]]), array([[40, 50, 60]]), array([], shape=(0, 3), dtype=int32)]\n",
+      " [array([[10, 20, 30]]), array([[40, 50, 60]])]\n",
       "splitting the arrays horizontally \n",
       " [array([[10],\n",
       "       [40]]), array([[20],\n",
       "       [50]]), array([[30],\n",
       "       [60]])]\n",
       "splitting the arrays vertically\n",
-      " [array([[10, 20, 30]]), array([[40, 50, 60]])]\n"
+      " [array([[10, 20, 30],\n",
+      "       [40, 50, 60]])]\n"
      ]
     }
    ],
    "source": [
+    "# Creating Arrays\n",
     "D=np.array([[10,20,30], [40,50,60]])\n",
     "E=np.array([[70,80,90], [100,110,120]])\n",
     "\n",
+    "# Array Stacking\n",
     "print(\"Stack the elements vertically\\n\",np.vstack((D,E)))\n",
     "print(\"Stack the elements horizontally\\n\",np.hstack((D,E)))\n",
-    "print(\"splitting the arrays using array split\\n\",np.array_split(D,3))\n",
+    "\n",
+    "# Array split, Vertical and Horizontal Split\n",
+    "print(\"splitting the arrays using array split\\n\",np.array_split(D,2))\n",
     "print(\"splitting the arrays horizontally \\n\",np.hsplit(D,3))\n",
-    "print(\"splitting the arrays vertically\\n\",np.vsplit(D,2))"
+    "print(\"splitting the arrays vertically\\n\",np.vsplit(D,1))"
    ]
   },
   {
@@ -160,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -178,14 +186,17 @@
     }
    ],
    "source": [
+    "# Creating 2 Matrices\n",
     "X=np.array([[5, 7, 2], [4, 5, 6], [7, 4 ,2]])\n",
     "Y=np.array([[4, 2], [6, 2], [4, 2]])\n",
+    "\n",
     "# Multiplying X*Y\n",
     "if(X.shape[1]==Y.shape[0]):\n",
     "    print(\" ----------X * Y ----------- \\n\",np.matmul(X,Y))\n",
     "else:\n",
     "    print(\"OOPs...!!!! Not possible to multiply X * Y\")\n",
     "    print(\"The number of columns of first matrix is not equal to the row of second matrix\")\n",
+    "    \n",
     "# Multiplying Y*X\n",
     "if(Y.shape[1]==X.shape[0]):\n",
     "    print(\" ----------Y * X ----------- \\n\",np.matmul(Y,X))\n",
@@ -205,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -226,19 +237,26 @@
     }
    ],
    "source": [
+    "# Creating Arrays\n",
     "X=np.array([2, -1, -8])\n",
     "Y=np.array([3, 1, -2])\n",
+    "\n",
+    "# Shape of Arrays\n",
     "print(\"Shape of vector X=\",X.shape)\n",
     "print(\"Shape of vector Y=\",Y.shape)\n",
+    "\n",
+    "# Dimension of Array X\n",
     "print(\"Dimension of vector X=\",X.ndim)\n",
+    "\n",
+    "# Reshaping of Array X and check shape again\n",
     "X_new=X.reshape(3,1)\n",
     "print(\"Reshaping array X to (3,1)\\n\",X_new)\n",
     "print(\"Shape of reshaped vector X=\",X_new.shape)\n",
     "\n",
+    "# Reshaping of Array Y and check shape again\n",
     "Y_new=Y.reshape(3,1)\n",
     "print(\"Dimension of reshaped Y=\",Y_new.ndim)\n",
-    "print(\"Shape of reshaped vector Y=\",Y_new.shape)\n",
-    "\n"
+    "print(\"Shape of reshaped vector Y=\",Y_new.shape)\n"
    ]
   },
   {
@@ -251,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -278,9 +296,12 @@
     }
    ],
    "source": [
+    "# Creating Arrays\n",
     "A=np.array([[5, 7, 2], [4, 5, 6], [7, 4 ,2]])\n",
     "B=np.array([2])\n",
     "C=np.array([[5, 7, 2], [4, 5, 6], [1, 1 ,1]])\n",
+    "\n",
+    "# Broadcast Examples\n",
     "DEC1=A-B\n",
     "print(\"Subtraction using broadcasting\\n\",DEC1)\n",
     "DEC2=A-C\n",
@@ -317,33 +338,47 @@
     "4x + y - 2z = 10<br>\n",
     "2x - 3y + 2z = -4<br>\n",
     "x + 2y + 3z = 6<br>\n",
-    "<b>Expected solution: The determinant of the matrix is not zero, thus, the matrix is non-singular,and  we can solve the matrix</b> "
+    "<b>Expected solution: The determinant of the matrix is not zero, thus, the matrix is non-singular,and  we can solve the matrix. This equations can be solved by numpy function np.linalg.solve()</b> "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Determinant= -70.00000000000003\n",
+      "------------Expected Solution-------------------:\n",
+      "Non-singular, solvable\n",
+      "------------Actual Solution------------:\n",
       "Part B.1, Solution =  [ 1.8  2.4 -0.2]\n"
      ]
     }
    ],
    "source": [
+    "# Representing Linear Equations \n",
     "L=np.array([[4,1,-2],[2,-3,2],[1,2,3]])\n",
     "R=np.array([10,-4,6])\n",
+    "\n",
+    "# computing determinant of matrix L\n",
     "detL=np.linalg.det(L)\n",
-    "print(\"Determinant=\",detL)\n",
-    "if(detL!=0):\n",
-    "    result=np.linalg.solve(L,R)\n",
-    "    print(\"Part B.1, Solution = \", result)\n",
+    "\n",
+    "# Expected Solution\n",
+    "print(\"------------Expected Solution-------------------:\")\n",
+    "if(detL==0):\n",
+    "    print(\"Singular, Not solvable\")\n",
     "else:\n",
-    "    print(\"Sorry...!!! The linear system of equations is not solvable\")\n"
+    "    print(\"Non-singular, solvable\")\n",
+    "\n",
+    "#trying to solve linear equations using numpy function\n",
+    "print(\"------------Actual Solution------------:\")\n",
+    "try: \n",
+    "    result=np.linalg.solve(L,R)            \n",
+    "    print(\"Part B.1, Solution = \", result)\n",
+    "except:\n",
+    "    print(\"Sorry...!!! The linear system of equations is not solvable using numpy function because determinant=\",detL)\n"
    ]
   },
   {
@@ -360,28 +395,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Determinant= 0.0\n",
-      "Sorry...!!! The linear system of equations is not solvable, because the matrix is singular\n"
+      "------------Expected Solution-------------------:\n",
+      "Singular, Not solvable\n",
+      "---------------Actual Solution------------------:\n",
+      "Sorry...!!! The linear system of equations is not solvable using numpy function because determinant= 0.0\n"
      ]
     }
    ],
    "source": [
     "L=np.array([[2,-1,3,4],[4,-2,6,8],[3,1,-2,2],[1,3,-4,1]])\n",
     "R=np.array([10,20,3,-1])\n",
+    "\n",
+    "# computing determinant of matrix L\n",
     "detL=np.linalg.det(L)\n",
-    "print(\"Determinant=\",detL)\n",
-    "if(detL!=0):\n",
-    "    result=np.linalg.solve(L,R)\n",
-    "    print(\"Part B.2, Solution = \", result)\n",
+    "\n",
+    "# Expected Solution\n",
+    "print(\"------------Expected Solution-------------------:\")\n",
+    "if(detL==0):\n",
+    "    print(\"Singular, Not solvable\")\n",
     "else:\n",
-    "    print(\"Sorry...!!! The linear system of equations is not solvable, because the matrix is singular\")"
+    "    print(\"Non-singular, solvable\")\n",
+    "\n",
+    "#trying to solve linear equations using numpy function\n",
+    "print(\"---------------Actual Solution------------------:\")\n",
+    "try: \n",
+    "    result=np.linalg.solve(L,R)            \n",
+    "    print(\"Part B.2, Solution = \", result)\n",
+    "except:\n",
+    "    print(\"Sorry...!!! The linear system of equations is not solvable using numpy function because determinant=\",detL)"
    ]
   }
  ],
