--- a/students-submissions/8946601/lab1.ipynb
+++ b/students-submissions/8946601/lab1.ipynb
@@ -162,8 +162,8 @@
     "<font color=\"blue\"><b> 5. Create two matrices X= ([[5, 7, 2], [4, 5, 6], [7, 4 ,2]]) Y= ([[4, 2], [6, 2], [4, 2]]),\n",
     "Is it possible to multiply these matrices?</font>\n",
     "<br>ANS: A matrix of shape (m, n) can be multiplied with a matrix of size (p,q) if and only if n is equal to p, then the shape of the resultant matrix will be (m,q). In the given example X is a matrix of shape (3,3) and Y is of shape (3,2), Thus, number of columns of first matrix is equal to number of rows of the second matrix. Thus it is possible to multiply x with Y. The resultant matrix will be of size (3,2). But the reverse is not possible. That is Y with X.<br>\n",
-    "<font color=\"blue\"><b>Demonstrate the case when it is not possible to.<b></font>\n",
-    "<br> When we try to multiply Y with X, we can't multiply. Both examples are demonstrated below.\n"
+    "<font color=\"blue\">Demonstrate the case when it is not possible to.<b></font>\n",
+    "<br> When we try to multiply Y with X, we can't multiply. Both examples are demonstrated below.</b>\n"
    ]
   },
   {
